# fast-zero

./: pyproject.toml
fast_zero/: app.py  models.py  security.py
fast_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 29d7f75bb408_create_users_table.py  5cf00ca15f75_update_users_table.py  d8c60188b855_create_todos_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
